# nanobanana4mama

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
data/: users.json
docs/: ADD.md  MDD.md  TDD.md  TODO.md  URD.md
src/: auth_module.py  gemini_api_module.py
tests/: test_auth_module.py  test_gemini_api_module.py
