[tool.poetry]
name = "nano-banana-for-mama"
version = "0.1.0"
description = "A simple, family-friendly, conversational image generation app powered by Google's Gemini API and Streamlit."
authors = ["Golden Grape"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.30.0"  # 使用一个具体的较新版本
streamlit-authenticator = "^0.3.0"
google-generativeai = "^0.7.0"
pillow = "^10.0.0"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# Pytest的配置选项
minversion = "6.0"
addopts = [
    "--tb=short",                            # 使用简化的回溯信息 (short traceback)
    "-q",                                    # 安静模式，减少不必要的输出
    "--report-log=unit-test-result.txt",     # 将报告日志输出到文件
]
testpaths = [
    "tests",                                 # 指定测试文件的查找路径
]
log_cli = true                               # 在命令行也显示日志
log_cli_level = "INFO"
log_cli_format = "%(message)s"
log_file = "unit-test-result.txt"            # 指定日志文件的名称
log_file_level = "INFO"
log_file_format = "%(asctime)s [%(levelname)s] %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
